--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /.idea/misc.xml
 /.idea/modules.xml
 /.idea/inspectionProfiles/profiles_settings.xml
-/postsReplyedTo.txt
-/TimesReplyed.txt
+postsReplyedTo.txt
+TimesReplyed.txt
 /.idea/vcs.xml
 /.idea/workspace.xml
